# nhfint

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  basis.cpp  basis.hpp  eri.cpp  eri.hpp  eri_class.cpp  eri_class.hpp  hgp_eri_class.cpp  hgp_eri_class.hpp  main.cpp
src/code-gen/: a.out  gen_hgp_hrr_call.cpp  gen_hgp_vrr_call.cpp
src/hgp_hrr_code/: CMakeLists.txt  hgp_hrr.hpp
src/hgp_vrr_code/: CMakeLists.txt  boysfun.cpp  boysfun.hpp  hgp_vrr.hpp  hgp_vrr_0_1_.cpp  hgp_vrr_0_2_.cpp  hgp_vrr_0_3_.cpp  hgp_vrr_0_4_.cpp  hgp_vrr_1_2_.cpp  hgp_vrr_1_3_.cpp  hgp_vrr_1_4_.cpp  hgp_vrr_2_1_.cpp  hgp_vrr_2_3_.cpp  hgp_vrr_2_4_.cpp  hgp_vrr_3_0_.cpp  hgp_vrr_3_3_.cpp  hgp_vrr_3_4_.cpp  hgp_vrr_4_1_.cpp  hgp_vrr_4_4_.cpp
test/: CMakeLists.txt  test_basis.cpp  test_eri_class.cpp
